[package]
name = "natpmp"
version = "0.3.1"
authors = ["fengyingcai <fengyc.work@gmail.com>"]
description = "NAT-PMP client library"
homepage = "https://github.com/fengyc/natpmp"
repository = "https://github.com/fengyc/natpmp"
documentation = "https://docs.rs/natpmp/"
readme = "README.md"
keywords = ["natpmp", "rfc6886", "nat", "portmapping"]
categories = ["network-programming"]
license = "MIT"
build = "build.rs"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["tokio"]
all = ["tokio", "async-std"]

[build-dependencies]
cc = "1"      # compile native c

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["net"], optional = true }
async-std = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"]}