[package]
name = "natpmp"
version = "0.4.0"
authors = ["fengyingcai <fengyc.work@gmail.com>"]
description = "NAT-PMP client library"
homepage = "https://github.com/fengyc/natpmp"
repository = "https://github.com/fengyc/natpmp"
documentation = "https://docs.rs/natpmp/"
readme = "README.md"
keywords = ["natpmp", "rfc6886", "nat", "portmapping"]
categories = ["network-programming"]
license = "MIT"
build = "build.rs"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "tcp-mapping"
path = "examples/tcp_mapping.rs"

[[example]]
name = "udp-mapping"
path = "examples/udp_mapping.rs"

[[example]]
name = "async-udp-tokio"
path = "examples/async_udp_tokio.rs"
required-features = ["tokio"]

[[example]]
name = "async-udp-async-std"
path = "examples/async_udp_asyncstd.rs"
required-features = ["async-std"]


[features]
default = ["tokio"]

all = ["tokio", "async-std"]

tokio = ["dep:tokio"]
async-std = ["dep:async-std"]

[build-dependencies]
cc = "1"      # compile native c

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["net"], optional = true }
async-std = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
